--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-adafruit-ampy==1.0.2
-click==6.7
-ecdsa==0.13
-esptool==2.1
+adafruit-ampy==1.0.7
+click==7.1.1
+ecdsa==0.15
+esptool==2.8
 pyaes==1.6.1
 pyserial==3.4
+python-dotenv==0.12.0
+six==1.14.0
